# Komekci-Bot

./: .env.example  .flake8  .gitignore  .replit  README.md  bot.py  bot_settings.json  config.py  pyproject.toml  replit.md  replit.nix  status.json  sync.sh  t --all)  web_server.py  wipes_config.json
.git.broken/: COMMIT_EDITMSG  ORIG_HEAD  config  index
.git.broken/refs/heads/: main  replit-agent
.github/: dependabot.yml
.github/workflows/: ci.yml
attached_assets/: Pasted---1758010572172_1758010572173.txt  Pasted-16-09-2025-13-58-09-INFO-root-INFO-16-09-2025-13-58--1758035664346_1758035664347.txt  Pasted-16-09-2025-15-29-28-INFO-root-INFO-16-09-2025-15-29--1758036640289_1758036640290.txt
cogs/: admin_panel.py  ai.py  ai_brain.py  application_system.py  entry_form.py  invites.py  kb_sync.py  nickname_admin.py  nickname_checker.py  roles.py  ticket_handler.py
data/: commands_synced.flag  extra_kb.txt  faq_kb.txt  kb.json
docs/: DOCUMENTATION.md  QUICK_START.md  RAG_SPEC.md  TECHNICAL_DOCUMENTATION.md
handlers/: __init__.py  auto_response.py  error_handler.py  novichok.py  novichok_actions.py  steam_api.py  tickets.py  wipes.py
static/: index.html
tests/: test_syntax.py
utils/: ai_moderation.py  cache.py  constants.py  db.py  decision.py  discord_logger.py  kb.py  logger.py  misc.py  nickname_filter.py  nickname_moderator.py  rate_limiter.py  retry.py  ticket_context.py  ticket_state.py  validators.py
